# DMD

./: CMakeLists.txt  README.md
include/: Pipeline.h
meshes/: cube.stl
old_meshes/: detal_defect.stl  detal_ideal.stl
pcds/: cylinder_matrix_defect_fh_ar.pcd  cylinder_matrix_ideal_fh_ar.pcd  remaining_half.pcd  remaining_half2.pcd
plys/: cylinder_matrix_defect_fh_ar.ply  cylinder_matrix_ideal_fh_ar.ply
scripts/: boolean.py  cut.py  global_registration_example.py  local_registration_example.py  meshlib_icp_example.py
src/: Pipeline.cpp  boolean_pipeline.cpp  global_local_icp.cpp  main.cpp  simple_boolean.cpp
